[tool.poetry]
name = "Infobserve"
version = "0.1.0"
description = ""
authors = ["Mikts <mikts94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "^0.20.1"
aiohttp = "^3.6"
pyyaml = "^5.3"
yara-python = "^3.11.0"
pbwrap = {version = "^1.2",extras = ["async"]}

[tool.poetry.dev-dependencies]
pytest = "^3.0"
yapf = "^0.29.0"
pylint = "^2.4.4"
rope = "^0.16.0"
mypy = "^0.761"
plyara = "^2.0"
docker-compose = "^1.25"
mccabe = "^0.6.1"
radon = "^4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"