[tool.poetry]
name = "Infobserve"
version = "0.1.0"
description = ""
authors = ["Mikts <mikts94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "^0.20.1"
aiohttp = "^3.8"
pyyaml = "^5.4"
yara-python = "^3.11.0"
pbwrap = {version = "^1.4",extras = ["async"]}
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
yapf = "^0.29.0"
pylint = "^2.17.5"
rope = "^0.16.0"
mypy = "^0.761"
plyara = "^2.1"
mccabe = "^0.6.1"
radon = "^4.5"
pytest-asyncio = "^0.10.0"
aioresponses = "^0.6.4"
coverage = "^5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"