[tool.poetry]
name = "Infobserve"
version = "0.1.0"
description = ""
authors = ["Mikts <mikts94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.28.0"
aiohttp = "^3.8.5"
pyyaml = "^6.0.1"
yara-python = "^4.3.1"
pbwrap = {version = "^1.4.0",extras = ["async"]}
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
yapf = "^0.29.0"
pylint = "^2.4.4"
rope = "^0.16.0"
mypy = "^0.761"
plyara = "^2.0"
mccabe = "^0.6.1"
radon = "^4.1"
pytest-asyncio = "^0.10.0"
aioresponses = "^0.6.3"
coverage = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"